# sagittarius

./: .editorconfig  .gitignore  .uncrustify.cfg  README.md  meson.build  sagittarius.doap  tk.thatlittlegit.sagittarius.json
build-aux/: beautify.py
data/: meson.build  tk.thatlittlegit.sagittarius.appdata.xml.in  tk.thatlittlegit.sagittarius.desktop.in  tk.thatlittlegit.sagittarius.gschema.xml
docs/reference/: meson.build
example-plugin/: README.md  example-plugin.c  example-plugin.h  example-plugin.plugin.in  meson.build
po/: POTFILES  fr.po  meson.build
src/: about-protocol.vala  application.vala  bytes-utils.vala  config.vapi  contenttype.vala  error.ui  error.vala  gemini-markup.vala  gemini-protocol.vala  gemini.vala  history.ui  history.vala  library.ui  library.vala  main.vala  meson.build  mime-types-configuration.ui  plugin-configuration.ui  plugins.ui  plugins.vala  renderer.vala  sagittarius.gresource.xml  tab.vala  uri-loader.vala  uri.c  uri.c.vala  uri.vala  utils.vala  window.ui  window.vala
src/about/: about.gresource.xml  about.plugin.in  meson.build  protocol.vala
src/file/: file.plugin.in  meson.build  protocol.vala
src/gemini/: crypto.c  crypto.vala  gemini.plugin.in  meson.build  plugin.vala  protocol.vala  renderer.vala
src/invincible/: evince-document-3.0.vapi  evince-view-3.0.vapi  invincible.plugin.in  invincible.vala  meson.build
src/parts/: meson.build  proto-about.plugin.in  proto-about.vala  proto-gemini.plugin.in  proto-gemini.vala  render-gemini.plugin.in  render-gemini.vala  render-welcome.plugin.in  render-welcome.vala
src/text/: meson.build  settings.ui  settings.vala  text.gresource.xml  text.gschema.xml  text.plugin.in  text.vala
